$Id: NEWS,v 1.806 2007-01-19 23:01:25 castaglia Exp $

-----------------------------------------------------------------------------
  More details on the bugs listed below can be found by using the bug number
  indicated in the following URL:

    http://bugs.proftpd.org/show_bug.cgi?id=N

  where `N' is the bug number.
-----------------------------------------------------------------------------

CVS
--------------------------------
- Bug 2875 - Malformed getopt checks cause compilation errors in getopt.c.
- Bug 2877 - ServerType 'inetd' results in "getnameinfo error: ai_family not
  supported" errors in log.
- Bug 2878 - Error compiling proftpd on Solaris 2.9 using --with-lastlog.
- Bug 2881 - ProFTPD does not support OPTS UTF8 command when --enable-nls is
  used.
- Bug 2883 - Problem with locale and SQL database queries.

1.3.1rc2 - Released 12-Jan-2007
--------------------------------
- Bug 2856 - Support for RADIUS NAS-Identifier attribute.
- Bug 2849 - Error msg "Not owner" returned by "SIZE in ASCII mode" is
  misleading.
- Bug 2857 - Failure to properly unregister event handlers leads to segfault
  after restarts.
- Bug 2869 - mod_sql botches WHERE clauses.
- Bug 2872 - CreateHome doesn't recreate symlinks from skeleton properly.

1.3.1rc1 - Released 12-Dec-2006
--------------------------------
- Bug 2766 - Support for automatic stack trace if SIGSEGV is received.
- Bug 2714 - mod_auth_file munges AuthUserFile, AuthGroupFile records.
- Bug 2721 - mod_auth_unix does not behave properly when first in AuthOrder.
- Bug 2535 - Compare directives using integer comparisons when possible to
  improve performance.
- Bug 2753 - CCC not closing SSL/TLS connection correctly.
- Bug 2654 - FEAT command should be subject to <Limit>.
- Bug 2740 - TYPE command not allowed before USER/PASS, causes problem for
  `ftp -n'.
- Bug 2777 - ProFTPD does handle data sockets properly on FreeBSD 6.
- Bug 2664 - Add 'delay info' ftpdctl action for showing DelayTable values.