@@ -1,4 +1,4 @@
-$Id: NEWS,v 1.806 2007-01-19 23:01:25 castaglia Exp $
+$Id: NEWS,v 1.807 2007-02-08 17:24:15 castaglia Exp $
 
 -----------------------------------------------------------------------------
   More details on the bugs listed below can be found by using the bug number
@@ -18,6 +18,7 @@ CVS
 - Bug 2881 - ProFTPD does not support OPTS UTF8 command when --enable-nls is
   used.
 - Bug 2883 - Problem with locale and SQL database queries.
+- Bug 2893 - ProFTPD can use the wrong group data if the user name changes.
 
 1.3.1rc2 - Released 12-Jan-2007
 --------------------------------
